# qpiskvork

./: .gitignore  .gitmodules  CMakeLists.txt  EngineLoader.cpp  FreeStyleGomoku.cpp  FreeStyleGomoku.h  Item.cpp  Item.h  README.md  StandardGomoku.cpp  StandardGomoku.h  board.cpp  board.h  commands.h  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  player.cpp  player.h  protocl2en.htm  qpiskvork.pro  res.qrc  rules.h  subject.h  timer.cpp  timer.h  xmake.lua  zh_CN.ts
.github/workflows/: cmake.yml
language/: zh_CN.qm  zh_CN.ts
snap/: snapcraft.yaml
snap/gui/: qpiskvork.desktop
src/: EngineLoader.cpp  EngineLoader.h  FreeStyleGomoku.cpp  FreeStyleGomoku.h  PlayerSettingDialog.cpp  PlayerSettingDialog.h  S2BResDialog.cpp  S2BResDialog.h  SGFOption.cpp  SGFOption.h  StandardGomoku.cpp  StandardGomoku.h  board.cpp  board.h  caro.cpp  caro.h  commander.cpp  commander.h  commands.h  customs.cpp  customs.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  observer.h  player.cpp  player.h  renju.cpp  renju.h  rules.h  subject.h  timer.cpp  timer.h
